creusot/tests/should_fail/bug/436_0.stderr
error[creusot]: called prophetic logic function "prophecy" in logic context
  --> 436_0.rs:15:23
   |
15 |     b.g = snapshot! { prophecy(b) + 1i32 };
   |                       ^^^^^^^^

error: aborting due to previous error

